# controllers/authentication/logout.controller.js
@@ -1,5 +1,11 @@
 async function logout(req, res) {
   try {
+    /*
+      #swagger.tags=['Authorization']
+      #swagger.description='Logout from early office'
+      #swagger.summary='Logout from early office'
+    */
+
     res.clearCookie("authToken");
     return res.status(200).json("Logout successful");
   } catch (error) {
