# swagger_output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Description",
+    "title": "Early office",
+    "description": "Early office",
     "version": "1.0.0"
   },
   "host": "localhost:4070",
@@ -10,9 +10,17 @@
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "api-key",
+      "in": "body"
+    }
+  },
   "paths": {
     "/api/student/signUp": {
       "post": {
+        "summary": "Student sign up",
         "description": "",
         "parameters": [
           {
@@ -118,7 +126,11 @@
     },
     "/api/logout": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authorization"
+        ],
+        "summary": "Logout from early office",
+        "description": "Logout from early office",
         "parameters": [
           {
             "name": "authorization",
@@ -751,6 +763,63 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "server side error": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string",
+          "example": "ERROR"
+        },
+        "msg": {
+          "type": "string",
+          "example": "some error message"
+        },
+        "error": {
+          "type": "object",
+          "properties": {
+            "message": {
+              "type": "string",
+              "example": "Error message caught"
+            },
+            "name": {
+              "type": "string",
+              "example": "Error name"
+            },
+            "stack": {
+              "type": "string",
+              "example": "Error stack"
+            }
+          },
+          "required": [
+            "message",
+            "name"
+          ]
+        }
+      },
+      "required": [
+        "status",
+        "msg"
+      ]
+    },
+    "calculation": {
+      "type": "object",
+      "properties": {
+        "createdAt": {
+          "type": "string",
+          "example": "2020-03-31T00:00:00.000Z"
+        },
+        "result": {
+          "type": "number",
+          "example": 100
+        }
+      },
+      "required": [
+        "createdAt",
+        "result"
+      ]
     }
   }
 }
